--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,5 +121,7 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="action_delete">Delete</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="show_map">Show Map</string>
 
 </resources>
